Enhanced Parameters utility for primitive types (#613)
* #591 - added base class to operate on generics and basic functionality tests

* #591 - updated dstu3 parameter type resolution and added tests

* #591 - updated r4 parameter type resolution and added tests

* #591 - updated r5 parameter type resolution and added tests

* Updated dstu3 pattern and tests - lots of changes and cleanup in the tests

* Updated r4 pattern and tests - lots of changes and cleanup in the tests

* Updated r5 pattern and tests

* Removed unused import