@@ -6,7 +6,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Arrays;
+import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 import org.hl7.fhir.r4.model.Bundle;
@@ -30,12 +31,12 @@ import ca.uhn.fhir.rest.param.StringAndListParam;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, classes = { CacheValueSetsProviderIT.class,
 		DevToolsConfig.class }, properties = { "hapi.fhir.fhir_version=r4" })
-public class CacheValueSetsProviderIT extends RestIntegrationTest {
+class CacheValueSetsProviderIT extends RestIntegrationTest {
 	@Autowired
 	private CacheValueSetsProvider cacheValueSetsProvider;
 
 	@Test
-	public void testCacheValueSetsEndpointDNE() throws Exception {
+	void testCacheValueSetsEndpointDNE() throws Exception {
 		Endpoint endpoint = new Endpoint();
 		endpoint.setId(new IdType("localhost"));
 		StringAndListParam stringAndListParam = getStringAndListParamFromValueSet("valueset/AcuteInpatient.json");
@@ -47,7 +48,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	}
 
 	@Test
-	public void testCacheValueSetsEndpointNull() throws Exception {
+	void testCacheValueSetsEndpointNull() throws Exception {
 		StringAndListParam stringAndListParam = getStringAndListParamFromValueSet("valueset/AcuteInpatient.json");
 		RequestDetails details = Mockito.mock(RequestDetails.class);
 		Resource outcomeResource = cacheValueSetsProvider.cacheValuesets(details, new Endpoint().getIdElement(),
@@ -56,7 +57,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	}
 
 	@Test
-	public void testCacheValueSetsAuthenticationErrorUsername() throws Exception {
+	void testCacheValueSetsAuthenticationErrorUsername() throws Exception {
 		Endpoint endpoint = uploadLocalServerEndpoint();
 		StringAndListParam stringAndListParam = getStringAndListParamFromValueSet("valueset/AcuteInpatient.json");
 		RequestDetails details = Mockito.mock(RequestDetails.class);
@@ -67,7 +68,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	}
 
 	@Test
-	public void testCacheValueSetsAuthenticationErrorPassword() throws Exception {
+	void testCacheValueSetsAuthenticationErrorPassword() throws Exception {
 		Endpoint endpoint = uploadLocalServerEndpoint();
 		StringAndListParam stringAndListParam = getStringAndListParamFromValueSet("valueset/AcuteInpatient.json");
 		RequestDetails details = Mockito.mock(RequestDetails.class);
@@ -78,11 +79,11 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	}
 
 	@Test
-	public void testCacheValueSetsValueSetDNE() throws Exception {
+	void testCacheValueSetsValueSetDNE() throws Exception {
 		Endpoint endpoint = uploadLocalServerEndpoint();
 		StringAndListParam stringAndListParam = new StringAndListParam();
 		stringAndListParam.setValuesAsQueryTokens(getFhirContext(), "valueset",
-				Arrays.asList(QualifiedParamList.singleton("dne")));
+				List.of(QualifiedParamList.singleton("dne")));
 		RequestDetails details = Mockito.mock(RequestDetails.class);
 		Resource outcomeResource = cacheValueSetsProvider.cacheValuesets(details, endpoint.getIdElement(),
 				stringAndListParam, null, null);
@@ -90,11 +91,11 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	}
 
 	@Test
-	public void testCacheValueSetsValueSetNull() throws Exception {
+	void testCacheValueSetsValueSetNull() throws Exception {
 		Endpoint endpoint = uploadLocalServerEndpoint();
 		StringAndListParam stringAndListParam = new StringAndListParam();
 		stringAndListParam.setValuesAsQueryTokens(getFhirContext(), "valueset",
-				Arrays.asList(QualifiedParamList.singleton(new ValueSet().getId())));
+				List.of(QualifiedParamList.singleton(new ValueSet().getId())));
 		RequestDetails details = Mockito.mock(RequestDetails.class);
 		Resource outcomeResource = cacheValueSetsProvider.cacheValuesets(details, endpoint.getIdElement(),
 				stringAndListParam, null, null);
@@ -103,7 +104,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	}
 
 	@Test
-	public void testCacheValueSetsNoCompose() throws Exception {
+	void testCacheValueSetsNoCompose() throws Exception {
 		Endpoint endpoint = uploadLocalServerEndpoint();
 		RequestDetails details = Mockito.mock(RequestDetails.class);
 		ValueSet vs = uploadValueSet("valueset/valueset-benzodiazepine-medications.json");
@@ -125,7 +126,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 
 	// Get help with this....
 	// @Test
-	// public void testCacheValueSetsExpandAndAddConcepts() throws Exception {
+	// void testCacheValueSetsExpandAndAddConcepts() throws Exception {
 	// Endpoint endpoint = uploadLocalServerEndpoint();
 	// RequestDetails details = Mockito.mock(RequestDetails.class);
 	// ValueSet vs =
@@ -156,7 +157,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 	// }
 
 	@Test
-	public void testCacheValueSetsAlreadyExpanded() throws Exception {
+	void testCacheValueSetsAlreadyExpanded() throws Exception {
 		Endpoint endpoint = uploadLocalServerEndpoint();
 		RequestDetails details = Mockito.mock(RequestDetails.class);
 		ValueSet vs = uploadValueSet("valueset/valueset-benzodiazepine-medications.json");
@@ -176,10 +177,10 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 		return getStringAndListParamFromValueSet(vs);
 	}
 
-	private StringAndListParam getStringAndListParamFromValueSet(ValueSet vs) throws IOException {
+	private StringAndListParam getStringAndListParamFromValueSet(ValueSet vs) {
 		StringAndListParam stringAndListParam = new StringAndListParam();
 		stringAndListParam.setValuesAsQueryTokens(getFhirContext(), "valueset",
-				Arrays.asList(QualifiedParamList.singleton(vs.getIdElement().getIdPart())));
+				List.of(QualifiedParamList.singleton(vs.getIdElement().getIdPart())));
 		return stringAndListParam;
 	}
 
@@ -194,7 +195,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 
 	private ValueSet uploadValueSet(String location) throws IOException {
 		BufferedReader reader = new BufferedReader(
-				new InputStreamReader(CacheValueSetsProvider.class.getResourceAsStream(location)));
+				new InputStreamReader(Objects.requireNonNull(CacheValueSetsProvider.class.getResourceAsStream(location))));
 		String resourceString = reader.lines().collect(Collectors.joining(System.lineSeparator()));
 		reader.close();
 		return (ValueSet) loadResource("json", resourceString);
@@ -202,7 +203,7 @@ public class CacheValueSetsProviderIT extends RestIntegrationTest {
 
 	private Endpoint uploadLocalServerEndpoint() throws IOException {
 		BufferedReader reader = new BufferedReader(new InputStreamReader(
-				CacheValueSetsProvider.class.getResourceAsStream("endpoint/LocalServerEndpoint.json")));
+				Objects.requireNonNull(CacheValueSetsProvider.class.getResourceAsStream("endpoint/LocalServerEndpoint.json"))));
 		String resourceString = reader.lines().collect(Collectors.joining(System.lineSeparator()));
 		reader.close();
 		// Don't want to update during loading because need to setAddress first
